--- a/BulletHell/BulletHell/index.html
+++ b/BulletHell/BulletHell/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>TypeScript HTML App</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
+    <script src="lib/collections.js"></script>
     <script src="lib/phaser.js"></script>
     <script src="game.js"></script>
 </head>
